assets/css/style.css
/* ... */
.navbar-uae .dropdown .dropdown:hover>ul {
  opacity: 1;
  top: 0;
  left: 100%;
  visibility: visible;
}

@media (max-width: 1366px) {
  .navbar-uae .dropdown .dropdown ul {
    left: -90%;
  }

  .navbar-uae .dropdown .dropdown:hover>ul {
    left: -100%;
  }
}

/**
* Mobile Navigation 
*/
.mobile-nav-toggle {
  color: var(--text-color);
  font-size: 28px;
  cursor: pointer;
  display: none;
  line-height: 0;
  transition: 0.5s;
}

.mobile-nav-toggle.bi-x {
  color: #fff;
}

@media (max-width: 991px) {
  .navbar ul {
    display: flex;
    flex-wrap: wrap;
  }
}

.navbar-mobile {
  position: fixed;
  overflow: hidden;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  background: rgba(63, 73, 83, 0.9);
  transition: 0.3s;
  z-index: 999;
}

.navbar-mobile .mobile-nav-toggle {
  position: absolute;
  top: 15px;
  right: 15px;
}

.navbar-mobile ul {
  display: block;
  position: absolute;
  top: 55px;
  right: 15px;
  bottom: 15px;
  left: 15px;
  padding: 10px 0;
  background-color: #fff;
  overflow-y: auto;
  transition: 0.3s;
}

.navbar-mobile a,
.navbar-mobile a:focus {
  padding: 10px 20px;
  font-size: 15px;
  color: var(--text-color);
}

.navbar-mobile a:hover,
.navbar-mobile .active,
.navbar-mobile li:hover>a {
  color: var(--primary-color);
}

.navbar-mobile .getstarted,
.navbar-mobile .getstarted:focus {
  margin: 15px;
}

.navbar-mobile .dropdown ul {
  position: static;
  display: none;
  margin: 10px 20px;
  padding: 10px 0;
  z-index: 99;
  opacity: 1;
  visibility: visible;
  background: #fff;
  box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
}

.navbar-mobile .dropdown ul li {
  min-width: 200px;
}

.navbar-mobile .dropdown ul a {
  padding: 10px 20px;
}

.navbar-mobile .dropdown ul a i {
  font-size: 12px;
}

.navbar-mobile .dropdown ul a:hover,
.navbar-mobile .dropdown ul .active:hover,
.navbar-mobile .dropdown ul li:hover>a {
  color: var(--primary-color);
  
}

.navbar-mobile .dropdown>.dropdown-active {
  display: block;
}

.nav-arabic a {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 12px; /* Larger font size */
  height: 40px; /* Adjust as necessary */
  padding: 0 10px; /* Horizontal padding; vertical is handled by flexbox */
  box-sizing: border-box;
  background-color: var(--primary-color);
  color: white;
  border-radius: 25px; /* Half the height to keep it circular */
  text-decoration: none;
  margin-left: 20px;
}


.nav-arabic a :hover{
  color: white;
  text-decoration: underline;
}

/* Apply now*/

.nav-apply a {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 16px; /* Larger font size */
  font-weight: bold;
  height: 40px; /* Adjust as necessary */
  padding: 0 10px; /* Horizontal padding; vertical is handled by flexbox */
  box-sizing: border-box;
  background-color: var(--apply-color);
  color: rgb(38, 0, 255);
  border-radius: 25px; /* Half the height to keep it circular */
  text-decoration: underline;
  margin-left: 20px;
}


.nav-apply a :hover{
  color: rgb(155, 155, 155);
  text-decoration: underline;
}

/* uae */

.nav-arabic-uae a {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 12px; /* Larger font size */
  height: 40px; /* Adjust as necessary */
  padding: 0 10px; /* Horizontal padding; vertical is handled by flexbox */
  box-sizing: border-box;
  background-color: var(--uae-color);
  color: white;
  border-radius: 25px; /* Half the height to keep it circular */
  text-decoration: none;
  margin-left: 20px;
}

.nav-arabic-uae a :hover{
  color: white;
  text-decoration: underline;
}

/* uae */

.nav-arabic-rr a {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 12px; /* Larger font size */
  height: 40px; /* Adjust as necessary */
  padding: 0 10px; /* Horizontal padding; vertical is handled by flexbox */
  box-sizing: border-box;
  background-color: var(--turk-color);
  color: white;
  border-radius: 25px; /* Half the height to keep it circular */
  text-decoration: none;
  margin-left: 20px;
}

.nav-arabic-rr a :hover{
  color: white;
  text-decoration: underline;
}

/*--------------------------------------------------------------
# Hero Section
--------------------------------------------------------------*/
#hero, #hero * {
  direction: ltr;
}

#hero {
  width: 100%;
  height: 100vh;
  background-color: rgba(63, 73, 83, 0.8);
  overflow: hidden;
  position: relative;
}

#hero .carousel,
#hero .carousel-inner,
#hero .carousel-item,
#hero .carousel-item::before {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
}

#hero .carousel-item {
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

#hero .carousel-item::before {
  content: "";
  background-color: rgba(30, 35, 40, 0.6);
}

#hero .carousel-container {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  bottom: 0;
  top: 70px;
  left: 50px;
  right: 50px;
}

#hero .container {
  text-align: right;
}

.html-en #hero .container {
  text-align: left;
}

#hero h2 {
  color: #fff;
  margin-bottom: 20px;
  font-size: 48px;
  font-weight: 700;
}

#hero p {
  animation-delay: 0.4s;
  margin: 0 auto 30px auto;
  color: #fff;
}

#hero .carousel-inner .carousel-item {
  transition-property: opacity;
  background-position: center top;
}

#hero .carousel-inner .carousel-item,
#hero .carousel-inner .active.carousel-item-start,
#hero .carousel-inner .active.carousel-item-end {
  opacity: 0;
}

#hero .carousel-inner .active,
#hero .carousel-inner .carousel-item-next.carousel-item-start,
#hero .carousel-inner .carousel-item-prev.carousel-item-end {
  opacity: 1;
  transition: 0.5s;
}

#hero .carousel-inner .carousel-item-next,
#hero .carousel-inner .carousel-item-prev,
#hero .carousel-inner .active.carousel-item-start,
#hero .carousel-inner .active.carousel-item-end {
  left: 0;
  transform: translate3d(0, 0, 0);
}
/* ... */

